syntax= "proto3";

package pb;

import "user.proto";
import "rpc_create_user.proto";

option go_package = "ms_auth/pb";

service Authen {
    rpc CreateUser (CreateUserMessage) returns (CreateUserRespone) {};
    rpc Login (LoginMessage) returns (LoginRespone) {};
}